--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
   <link href="static/bootstrap3/css/pages/tasks.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/css/themes/light.css" rel="stylesheet" type="text/css" id="style_color"/>
    <link rel="stylesheet" href="static/plugins/ngQuickDate/ng-quick-date.css"/>
+   <link rel="stylesheet" href="static/plugins/ngQuickDate/ng-quick-date-default-theme.css"/>
    <link rel="stylesheet" href="static/css/datetimepicker.css"/>
   <link href="static/bootstrap3/css/custom.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
