migrate group show to bootstrap3.0

--- a/templates/admin/groups/list.html
+++ b/templates/admin/groups/list.html
@@ -111,24 +111,7 @@
                 </div>
               </div>
               <div class="row">
-              <div ng-show="blankstategroup" class="col-md-12 responsive" >
-                <div class="dashboard-stat cards">
-                  
-                  
-                  <div class="blank_slate_arrow"></div>
-                  <div class="blank_slate_body">
-                      <img src="/static/img/accounts_blank.png">
-                      <p class="lead">{{ _('Manage easily your Group.') }}</p>
-                  </div>
-               
-                                  
-                </div>
-              </div>
-              </div>
-              </div>
-             </div> 
-            </div>
-          <div class="row">
+              <div class="col-md-12">
             <div class="pagination pull-right" ng-hide="isLoading">
                   
                   <ul>
@@ -143,6 +126,11 @@
                 </div>
                 <h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3>
           </div>
+          </div>
+              </div>
+             </div> 
+            </div>
+          
             
           
         
