--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -207,7 +207,7 @@
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-12">
-                <form ng-submit="addNewTask()" >
+                <form ng-submit="addNewTask()" class="newTaskForm">
                     <div class="form-group">
                       <div class="input-icon right">
                         <input taggable taggabledata="taggableOptions" ng-model="newTask.title" id="new_task_text" class="form-control"  placeholder="Add new task ..." autofocus/>
