--- a/templates/base.html
+++ b/templates/base.html
@@ -375,6 +375,7 @@
   <!--<script src="static/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>      -->
   
    <script type="text/javascript" src="static/app/scripts/vendor/bootstrap-datetimepicker.min.js"></script>
+   <script type="text/javascript" src="static/plugins/caret/jquery.caret.js"></script>
   <script src="static/bootstrap3/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="static/plugins/excanvas.min.js"></script>
