--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -92,16 +92,16 @@
 
                     <hr/>
                     <p>Who can access?</p>
-                     <div class=''>
+                     <div class="radio-list">
 
                      
                           
-                            <label class="radio line">
-                            <input type="radio" value="public" ng-model="lead.access" />
+                            <label >
+                            <input type="radio" name="optionsRadios" value="public" ng-model="lead.access" checked />
                             public: Anyone within your organization
                             </label>
-                            <label class="radio line">
-                            <input type="radio"  value="private" ng-model="lead.access" />
+                            <label >
+                            <input type="radio" name="optionsRadios"  value="private" ng-model="lead.access" />
                             private: only you and your collaborators
                             </label>  
                            
