--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -63,24 +63,22 @@
                     </div>
                     <hr/>
                     <p> {{ _('Who can access?') }}</p>
-
+                  <div class="form-group">
                      <div class='radio-list'>
-
-                     
-                          
-                            <label class="radio line">
-                            <input type="radio" value="public" ng-model="account.access" />
+                         
+                            <label >
+                            <input type="radio" name="optionsRadios" value="public" ng-model="account.access" checked />
                              {{ _('public: Anyone within your organization') }}
                             </label>
-                            <label class="radio line">
-                            <input type="radio"  value="private" ng-model="account.access" />
+                            <label >
+                            <input type="radio" name="optionsRadios" value="private" ng-model="account.access" />
                             {{ _('private: only you and your collaborators') }}
                             </label>  
                            
                        
                       
                     </div>
-                                                  
+                  </div>                               
                     </div>
                     <div class="modal-footer">
                        <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
