--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -63,21 +63,22 @@
                     </div>
                     <hr/>
                     <p>Who can access?</p>
-                     <div class='container'>
-
+                     
+                     
+                     <div class='radio-list'>
                      
                           
-                            <label class="radio line">
-                            <input type="radio" value="public" ng-model="contact.access" />
+                            <label  >
+                            <input type="radio" name="optionsRadios" value="public" ng-model="contact.access" checked />
                             public: Anyone within your organization
                             </label>
-                            <label class="radio line">
-                            <input type="radio"  value="private" ng-model="contact.access" />
+                            <label  >
+                            <input type="radio" name="optionsRadios"  value="private" ng-model="contact.access" />
                             private: only you and your collaborators
                             </label>  
                            
                        
-                      
+                     
                     </div>
               </div>
               <div class="modal-footer">
