--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -98,22 +98,22 @@
                     </div>
                     <hr/>
                     <p>Who can access?</p>
-                     <div class='container-fluid'>
-
                      
+
+                     <div class='radio-list'>
                           
-                            <label class="radio line">
-                            <input type="radio" value="public" ng-model="opportunity.access" />
+                            <label >
+                            <input type="radio" name="optionsRadios"  value="public" ng-model="opportunity.access" checked />
                             public: Anyone within your organization
                             </label>
-                            <label class="radio line">
-                            <input type="radio"  value="private" ng-model="opportunity.access" />
+                            <label >
+                            <input type="radio"  name="optionsRadios" value="private" ng-model="opportunity.access" />
                             private: only you and your collaborators
                             </label>  
                            
                        
-                      
-                    </div>
+                    </div> 
+                    
                    
                 
               </div>
