Access on Account show

--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -64,7 +64,7 @@
                     <hr/>
                     <p> {{ _('Who can access?') }}</p>
                   <div class="form-group">
-                     <div class='radio-list'>
+                     <div class="radio-list">
                          
                             <label >
                             <input type="radio" name="optionsRadios" value="public" ng-model="account.access" checked />
