fix bug in input text on sharing Modal

--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -87,7 +87,7 @@
                     </div>
                     <hr/>
 
-                    <div class='container'>
+                    <div class=''>
                     <p>Invited user:</p>
                     <div class="invitation" ng-show="slected_memeber">
                       <img class="google-avatar" src="<%= slected_memeber.google_public_profile_photo_url%>"/>
