--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -142,7 +142,7 @@
                       <li class="ng-tab" ng-class="{active: selectedTab == 1}"><a ng-click="selectedTab = 1;" >{{ _("Notes") }}</a></li>
                       <li class="ng-tab" ng-class="{active: selectedTab == 2}"><a ng-click="selectedTab = 2;renderMaps();">{{ _("About") }}</a></li>
                       <li class="ng-tab" ng-class="{active: selectedTab == 3}"><a ng-click="selectedTab = 3;">{{ _("Contacts") }}</a></li>
-                      <li class="ng-tab" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;">{{ _("Customer Needs") }}</a></li>
+                      <li class="ng-tab" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;">{{ _("Needs") }}</a></li>
                       <li class="ng-tab" ng-class="{active: selectedTab == 5}"><a ng-click="selectedTab = 5;">{{ _("Opportunities") }}</a></li>
                       <li class="ng-tab"  ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">{{ _("Cases") }}</a></li>
                       <li class="ng-tab"  ng-class="{active: selectedTab == 7}"><a ng-click="selectedTab = 7;">{{ _("Attach Documents") }}</a></li>
@@ -495,12 +495,12 @@
                       <div class="modal-content">
                         <div class="modal-header">
                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                          <h3 id="myModalLabel" class="modal-title">{{_("Add new Customer Needs")}}</h3>
+                          <h3 id="myModalLabel" class="modal-title">{{_("Add new Need")}}</h3>
                         </div>
                           <div class="modal-body">
                              <form id="addCase" name="addCase" ng-submit="saveNeed(need)" class="form-horizontal">             
                                 <div class="form-group">
-                                    <label  class="required col-md-3 control-label">{{_("Subject of the need")}} </label>
+                                    <label  class="required col-md-3 control-label">{{_("Subject")}} </label>
                                    
                                     <div class="col-md-9">
                                       <input type="text" class="form-control" id="id_name" ng-model="need.name">
@@ -508,7 +508,7 @@
                                     </div>
                                 </div>
                                  <div class="form-group">
-                                    <label  class="required col-md-3 control-label">{{_("More details about this need")}} </label>
+                                    <label  class="required col-md-3 control-label">{{_("More details")}} </label>
                                    
                                     <div class="col-md-9">
                                        <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="need.description"></textarea>
